--- a/Cartas y barajas/Cartas y barajas.csproj
+++ b/Cartas y barajas/Cartas y barajas.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Baraja.cs" />
     <Compile Include="Carta.cs" />
+    <Compile Include="Jugadores.cs" />
     <Compile Include="Juego.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
